[package]
name = "stealth-receipts"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stealth-lifecycle = { path = "../lifecycle" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stealth-policies = { path = "../policies" }
