[package]
name = "stealth-receipts"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stealth-lifecycle = { path = "../lifecycle", features = ["contract"] }
stealth-policies = { path = "../policies" }
proptest = "1.4.0"
